fix bouncing cat hitting body margin bounds

--- a/robotics/index.html
+++ b/robotics/index.html
@@ -33,188 +33,179 @@
 
     <script src="/theme.js"></script>
 
-    <br />
-
-    <div id="opening">
-      <img
-        src="happi.webp"
-        srcset="
-          happi.webp       2049w,
-          happi/x2048.webp 2048w,
-          happi/x2048.png  2048w,
-          happi/x1536.webp 1536w,
-          happi/x1536.png  1536w,
-          happi/x1024.webp 1024w,
-          happi/x1024.png  1024w,
-          happi/x768.webp   768w,
-          happi/x768.png    768w,
-          happi/x512.webp   512w,
-          happi/x512.png    512w,
-          happi/x384.webp   384w,
-          happi/x384.png    384w,
-          happi/x256.webp   256w,
-          happi/x256.png    256w,
-          happi/x192.webp   192w,
-          happi/x192.png    192w
-        "
-        alt="toby photo op"
-        style="transform-origin: top left; margin-left: 0; aspect-ratio: 3701 / 3456"
-        fetchpriority="high" />
-
-      <img
-        src="_MG_9181.webp"
-        srcset="
-          _MG_9181.webp       2049w,
-          _MG_9181/x2048.webp 2048w,
-          _MG_9181/x2048.png  2048w,
-          _MG_9181/x1536.webp 1536w,
-          _MG_9181/x1536.png  1536w,
-          _MG_9181/x1024.webp 1024w,
-          _MG_9181/x1024.png  1024w,
-          _MG_9181/x768.webp   768w,
-          _MG_9181/x768.png    768w,
-          _MG_9181/x512.webp   512w,
-          _MG_9181/x512.png    512w,
-          _MG_9181/x384.webp   384w,
-          _MG_9181/x384.png    384w,
-          _MG_9181/x256.webp   256w,
-          _MG_9181/x256.png    256w,
-          _MG_9181/x192.webp   192w,
-          _MG_9181/x192.png    192w
-        "
-        alt="toby and mentor"
-        style="aspect-ratio: 2 / 3"
-        fetchpriority="low" />
-
-      <img
-        src="_MG_9190.webp"
-        srcset="
-          _MG_9190.webp       2049w,
-          _MG_9190/x2048.webp 2048w,
-          _MG_9190/x2048.png  2048w,
-          _MG_9190/x1536.webp 1536w,
-          _MG_9190/x1536.png  1536w,
-          _MG_9190/x1024.webp 1024w,
-          _MG_9190/x1024.png  1024w,
-          _MG_9190/x768.webp   768w,
-          _MG_9190/x768.png    768w,
-          _MG_9190/x512.webp   512w,
-          _MG_9190/x512.png    512w,
-          _MG_9190/x384.webp   384w,
-          _MG_9190/x384.png    384w,
-          _MG_9190/x256.webp   256w,
-          _MG_9190/x256.png    256w,
-          _MG_9190/x192.webp   192w,
-          _MG_9190/x192.png    192w
-        "
-        alt="<3"
-        style="aspect-ratio: 2 / 3"
-        fetchpriority="low" />
-
-      <img
-        src="xd.webp"
-        srcset="
-          xd.webp       1025w,
-          xd/x1024.webp 1024w,
-          xd/x1024.png  1024w,
-          xd/x768.webp   768w,
-          xd/x768.png    768w,
-          xd/x512.webp   512w,
-          xd/x512.png    512w,
-          xd/x384.webp   384w,
-          xd/x384.png    384w,
-          xd/x256.webp   256w,
-          xd/x256.png    256w,
-          xd/x192.webp   192w,
-          xd/x192.png    192w
-        "
-        alt="toby and team lead"
-        style="aspect-ratio: 4 / 5"
-        fetchpriority="low" />
-    </div>
-
-    <a href="https://pentictonrobotics.ca">
-      <h1>Penticton Robotics - FRC Team #8339</h1>
-    </a>
-
-    <h2 style="font-size: 1.25rem">Lead Robot Programming | Graphics Designer | Lead Website Developer | Electrician</h2>
-
-    <p><i>2 years and counting...</i></p>
-
-    <br />
-
-    <h2 id="compText">Competition participated:</h2>
-    <div class="competitionsContainer">
-      <div class="competitions">
-        <div class="competition">
-          <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
-            <img
-              src="https://www.firstinspires.org/sites/default/files/2024-banner/frc_reefscape.gif"
-              alt="2025 FIRST Robotics Competition: Reefscape"
-              style="scale: 1"
-              fetchpriority="low"
-              loading="lazy" />
-          </a>
-          <div>
-            <p style="text-align: center">FIRST Robotics Competition: Reefscape&trade;</p>
-            <p style="text-align: center">2025</p>
-            <p style="text-align: center">Canadian Pacific Regional Winner 🏅</p>
+    <div id="app">
+      <br />
+      <div id="opening">
+        <img
+          src="happi.webp"
+          srcset="
+            happi.webp       2049w,
+            happi/x2048.webp 2048w,
+            happi/x2048.png  2048w,
+            happi/x1536.webp 1536w,
+            happi/x1536.png  1536w,
+            happi/x1024.webp 1024w,
+            happi/x1024.png  1024w,
+            happi/x768.webp   768w,
+            happi/x768.png    768w,
+            happi/x512.webp   512w,
+            happi/x512.png    512w,
+            happi/x384.webp   384w,
+            happi/x384.png    384w,
+            happi/x256.webp   256w,
+            happi/x256.png    256w,
+            happi/x192.webp   192w,
+            happi/x192.png    192w
+          "
+          alt="toby photo op"
+          style="transform-origin: top left; margin-left: 0; aspect-ratio: 3701 / 3456"
+          fetchpriority="high" />
+        <img
+          src="_MG_9181.webp"
+          srcset="
+            _MG_9181.webp       2049w,
+            _MG_9181/x2048.webp 2048w,
+            _MG_9181/x2048.png  2048w,
+            _MG_9181/x1536.webp 1536w,
+            _MG_9181/x1536.png  1536w,
+            _MG_9181/x1024.webp 1024w,
+            _MG_9181/x1024.png  1024w,
+            _MG_9181/x768.webp   768w,
+            _MG_9181/x768.png    768w,
+            _MG_9181/x512.webp   512w,
+            _MG_9181/x512.png    512w,
+            _MG_9181/x384.webp   384w,
+            _MG_9181/x384.png    384w,
+            _MG_9181/x256.webp   256w,
+            _MG_9181/x256.png    256w,
+            _MG_9181/x192.webp   192w,
+            _MG_9181/x192.png    192w
+          "
+          alt="toby and mentor"
+          style="aspect-ratio: 2 / 3"
+          fetchpriority="low" />
+        <img
+          src="_MG_9190.webp"
+          srcset="
+            _MG_9190.webp       2049w,
+            _MG_9190/x2048.webp 2048w,
+            _MG_9190/x2048.png  2048w,
+            _MG_9190/x1536.webp 1536w,
+            _MG_9190/x1536.png  1536w,
+            _MG_9190/x1024.webp 1024w,
+            _MG_9190/x1024.png  1024w,
+            _MG_9190/x768.webp   768w,
+            _MG_9190/x768.png    768w,
+            _MG_9190/x512.webp   512w,
+            _MG_9190/x512.png    512w,
+            _MG_9190/x384.webp   384w,
+            _MG_9190/x384.png    384w,
+            _MG_9190/x256.webp   256w,
+            _MG_9190/x256.png    256w,
+            _MG_9190/x192.webp   192w,
+            _MG_9190/x192.png    192w
+          "
+          alt="<3"
+          style="aspect-ratio: 2 / 3"
+          fetchpriority="low" />
+        <img
+          src="xd.webp"
+          srcset="
+            xd.webp       1025w,
+            xd/x1024.webp 1024w,
+            xd/x1024.png  1024w,
+            xd/x768.webp   768w,
+            xd/x768.png    768w,
+            xd/x512.webp   512w,
+            xd/x512.png    512w,
+            xd/x384.webp   384w,
+            xd/x384.png    384w,
+            xd/x256.webp   256w,
+            xd/x256.png    256w,
+            xd/x192.webp   192w,
+            xd/x192.png    192w
+          "
+          alt="toby and team lead"
+          style="aspect-ratio: 4 / 5"
+          fetchpriority="low" />
+      </div>
+      <a href="https://pentictonrobotics.ca">
+        <h1>Penticton Robotics - FRC Team #8339</h1>
+      </a>
+      <h2 style="font-size: 1.25rem">Lead Robot Programming | Graphics Designer | Lead Website Developer | Electrician</h2>
+      <p><i>2 years and counting...</i></p>
+      <br />
+      <h2 id="compText">Competition participated:</h2>
+      <div class="competitionsContainer">
+        <div class="competitions">
+          <div class="competition">
+            <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
+              <img
+                src="https://www.firstinspires.org/sites/default/files/2024-banner/frc_reefscape.gif"
+                alt="2025 FIRST Robotics Competition: Reefscape"
+                style="scale: 1"
+                fetchpriority="low"
+                loading="lazy" />
+            </a>
+            <div>
+              <p style="text-align: center">FIRST Robotics Competition: Reefscape&trade;</p>
+              <p style="text-align: center">2025</p>
+              <p style="text-align: center">Canadian Pacific Regional Winner 🏅</p>
+            </div>
           </div>
-        </div>
-        <div class="competition">
-          <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
-            <img
-              src="https://upload.wikimedia.org/wikipedia/en/8/88/Crescendo_FRC_Logo.svg"
-              alt="2024 FIRST Robotics Competition: Crescendo"
-              style="scale: 1"
-              fetchpriority="low"
-              loading="lazy" />
-          </a>
-          <div>
-            <p style="text-align: center">FIRST Robotics Competition: Crescendo&trade;</p>
-            <p style="text-align: center">2024</p>
-            <p style="text-align: center">Canadian Pacific Regional Alliance 8</p>
+          <div class="competition">
+            <a href="https://www.firstinspires.org/robotics/frc/game-and-season">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/en/8/88/Crescendo_FRC_Logo.svg"
+                alt="2024 FIRST Robotics Competition: Crescendo"
+                style="scale: 1"
+                fetchpriority="low"
+                loading="lazy" />
+            </a>
+            <div>
+              <p style="text-align: center">FIRST Robotics Competition: Crescendo&trade;</p>
+              <p style="text-align: center">2024</p>
+              <p style="text-align: center">Canadian Pacific Regional Alliance 8</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
-    <div id="xd">
-      <div>
-        <img src="/signature.svg" alt="toby signature" fetchpriority="low" loading="lazy" />
-        <p style="text-align: center; translate: 0 -25px">- tobycm</p>
+      <div id="xd">
+        <div>
+          <img src="/signature.svg" alt="toby signature" fetchpriority="low" loading="lazy" />
+          <p style="text-align: center; translate: 0 -25px">- tobycm</p>
+        </div>
+        <img
+          src="IMG_3405.webp"
+          srcset="
+            IMG_3405.webp       2049w,
+            IMG_3405/x2048.webp 2048w,
+            IMG_3405/x2048.png  2048w,
+            IMG_3405/x1536.webp 1536w,
+            IMG_3405/x1536.png  1536w,
+            IMG_3405/x1024.webp 1024w,
+            IMG_3405/x1024.png  1024w,
+            IMG_3405/x768.webp   768w,
+            IMG_3405/x768.png    768w,
+            IMG_3405/x512.webp   512w,
+            IMG_3405/x512.png    512w,
+            IMG_3405/x384.webp   384w,
+            IMG_3405/x384.png    384w,
+            IMG_3405/x256.webp   256w,
+            IMG_3405/x256.png    256w,
+            IMG_3405/x192.webp   192w,
+            IMG_3405/x192.png    192w
+          "
+          alt="<3"
+          fetchpriority="low"
+          loading="lazy" />
       </div>
-      <img
-        src="IMG_3405.webp"
-        srcset="
-          IMG_3405.webp       2049w,
-          IMG_3405/x2048.webp 2048w,
-          IMG_3405/x2048.png  2048w,
-          IMG_3405/x1536.webp 1536w,
-          IMG_3405/x1536.png  1536w,
-          IMG_3405/x1024.webp 1024w,
-          IMG_3405/x1024.png  1024w,
-          IMG_3405/x768.webp   768w,
-          IMG_3405/x768.png    768w,
-          IMG_3405/x512.webp   512w,
-          IMG_3405/x512.png    512w,
-          IMG_3405/x384.webp   384w,
-          IMG_3405/x384.png    384w,
-          IMG_3405/x256.webp   256w,
-          IMG_3405/x256.png    256w,
-          IMG_3405/x192.webp   192w,
-          IMG_3405/x192.png    192w
-        "
-        alt="<3"
-        fetchpriority="low"
-        loading="lazy" />
+      <footer>
+        <hr />
+        Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> |
+        shoutout to my friend who want to take over las vegas
+      </footer>
     </div>
-
-    <footer>
-      <hr />
-      Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> | shoutout
-      to my friend who want to take over las vegas
-    </footer>
 
     <script async src="/anchors.js"></script>
   </body>
