--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
     <link rel="stylesheet" href="/apple_cat.css" />
 
+    <link rel="stylesheet" href="https://tobycm.github.io/easy-snow/snow.css" />
+    <script>
+      const now = new Date();
+      document.christmas = now.getMonth() > 9 || now.getMonth() < 3; // Nov to Mar
+    </script>
+    <script src="https://tobycm.github.io/easy-snow/snow.js"></script>
+
     <title>Toby Cm</title>
   </head>
 
