--- a/robotics/index.html
+++ b/robotics/index.html
@@ -23,6 +23,13 @@
     <link rel="preload" href="/light.css" as="style" />
 
     <link rel="stylesheet" href="index.css" />
+
+    <link rel="stylesheet" href="https://tobycm.github.io/easy-snow/snow.css" />
+    <script>
+      const now = new Date();
+      document.christmas = now.getMonth() > 9 || now.getMonth() < 3; // Nov to Mar
+    </script>
+    <script src="https://tobycm.github.io/easy-snow/snow.js"></script>
   </head>
   <body>
     <a href="/index.html" class="home exclude">&lt;- back to home page</a>
