loving those animations and hover

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <p id="desktopTip"><i>for the best experience, check out this website on a desktop</i></p>
         <br />
         <audio src="./chess type beat ⧸⧸ tiktok dance minecraft music ♪ [yvyA1yiyxgI].mp3" controls></audio>
-        <br />
-        <h1>Projects:</h1>
       </div>
+      <hr />
+      <h1 style="text-align: center">Projects:</h1>
       <br />
       <div class="projects">
         <div class="project">
@@ -148,10 +148,24 @@
           Toby's huge <a href="https://vsus.link/hcm">Happy Coding Music playlist</a>
         </li>
       </ul>
-      <br />
+      <hr />
       <h2>Hardware:</h2>
-      <h3>Trying new stuff outside of my comfort zone: 3D Modelling, Making Electrical Schematic, Designing PCBs, etc.</h3>
+      <h3>Trying new stuff outside of my comfort zone: 3D modelling, making electrical schematic, designing PCBs, etc.</h3>
       <br />
+
+      <!-- <div class="hardwareProjects">
+        <div>
+          <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png" target="_blank">
+            <img
+              src="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png"
+              alt="Toby's Hackpad Case"
+              class="zoom"
+              fetchPriority="low"
+              loading="lazy"
+          /></a>
+        </div>
+      </div> -->
+
       <p>
         Making a hackpad: Case:
         <a href="https://raw.githubusercontent.com/tobycm/hackpad/refs/heads/main/hackpads/toby-hackpad/assets/case.png" target="_blank">
