hot fix big links not changing color

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
           Leader of <a href="https://tobycm.github.io/skibidi-penhi/">Pen High Coding Club</a> supported by
           <a href="https://hackclub.com/">Hack Club</a>
         </h3>
-        <a href="/robotics" class="exclude">
-          <h3 style="color: var(--primary-color)">Lead Coder of Penticton Robotics &mdash; 🎆 2025 ReefScape&trade; Champion 🏅🎆</h3>
-        </a>
+        <h3><a href="/robotics" class="exclude"> Lead Coder of Penticton Robotics &mdash; 🎆 2025 ReefScape&trade; Champion 🏅🎆 </a></h3>
         <a href="/robotics" class="exclude" id="clickMe">
           <p style="color: gray; font-size: smaller">click me to find out more</p>
         </a>
