--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="preconnect" href="https://tobycm.github.io" />
+
     <link rel="shortcut icon" href="/logo.svg" type="image/svg" />
 
     <meta name="description" content="Toby Cm is a passionate high school student doing DevOps with friends. Based in Penticton, BC, Canada!" />
@@ -31,6 +33,9 @@
       document.christmas = now.getMonth() > 9 || now.getMonth() < 3; // Nov to Mar
     </script>
     <script src="https://tobycm.github.io/easy-snow/snow.js"></script>
+
+    <script src="https://tobycm.github.io/simple-slideshow/slideshow.js"></script>
+    <link rel="stylesheet" href="https://tobycm.github.io/simple-slideshow/slideshow.css" />
 
     <title>Toby Cm</title>
   </head>
