hyperlink email in footer

--- a/index.html
+++ b/index.html
@@ -279,8 +279,9 @@
       </h3>
       <footer>
         <hr />
-        Copyright © <span id="year">2025</span> toby@vsus.app | GitHub: <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> |
-        <a href="./resume mar 2025.pdf">maximizing shareholders value</a> | shoutout to my friend who want to take over las vegas
+        Copyright © <span id="year">2025</span> <a href="mailto:toby@vsus.app">toby@vsus.app</a> | GitHub:
+        <a href="https://github.com/tobycm/tobycm.dev">tobycm/tobycm.dev</a> | <a href="./resume mar 2025.pdf">maximizing shareholders value</a> |
+        shoutout to my friend who want to take over las vegas
       </footer>
     </div>
     <script async src="/anchors.js"></script>
