fix some responsive issues

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
           <h2>skibidi-uwu-pad</h2>
           <p>me when i osu</p>
 
-          <h3>features:</h3>
-          <ul style="margin: 0;">
+          <h3 class="mobye">features:</h3>
+          <ul style="margin: 0;" class="mobye">
             <li>3 hall effects switches</li>
             <li>2 cherry mx switches</li>
             <li>1 rotary encoder with push</li>
@@ -178,9 +178,9 @@
           <h2>skibidi-usb-hub</h2>
           <p>7-port usb hub with some ethernet and an audio out jack.</p>
 
-          <h3>features:</h3>
+          <h3 class="mobye">features:</h3>
 
-          <ul style="margin: 0;">
+          <ul style="margin: 0;" class="mobye">
             <li>1 USB C port for upstream</li>
             <li>2 USB C ports</li>
             <li>2 USB A ports</li>
@@ -291,9 +291,9 @@
             blahaj keychain, perfect for presents :3. built as part of Hack Club's Solder YSWS.
           </p>
 
-          <h3>Features</h3>
+          <h3 class="mobye">Features</h3>
 
-          <ul style="margin: 0;">
+          <ul style="margin: 0;" class="mobye">
             <li>stay-on LED after pressing the button</li>
             <li>glow-in-the-dark eye</li>
             <li>shiny body</li>
@@ -527,6 +527,8 @@
         </ul>
       </div>
     </div>
+
+    <br />
 
     <footer>
       <hr />
