trim some descriptions

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
         <div class="description">
           <h2>skibidi-album-clicker</h2>
           <p>
-            a small christmas gift project that displays small images on a 1.3 inch LCD screen with a rotary encoder to
-            cycle through them. built with seeed xiao rp2040.
+            a small christmas gift project that displays small images on a 1.3 inch LCD screen. built with seeed xiao
+            rp2040.
           </p>
           <a href="https://github.com/tobycm/skibidi-album-clicker">skibidi-album-clicker</a>
         </div>
@@ -358,8 +358,8 @@
         <div class="description">
           <h2>Toby's Hacker Card</h2>
           <p>
-            nfc business card. includes contact info, a very cool looking qr code and my logo. also has some honourable
-            mentions. designed as part of Hack Club's OnBoard program.
+            nfc business card. includes contact info, a very cool looking qr code and my logo. designed as part of Hack
+            Club's OnBoard program.
           </p>
           <a href="https://github.com/hackclub/OnBoard/pull/1476">Pull Request</a>
         </div>
@@ -373,7 +373,7 @@
         <div class="description">
           <h2>a very simple file uploader</h2>
           <p>
-            a very simple file uploader with a minimalistic design and easy to use interface. optional password
+            a very simple file uploader with a easy to use interface. optional password
             protection for uploading. contact @tobycm on Discord for access!
           </p>
           <a href="https://file.tobycm.dev">file.tobycm.dev</a>
