fix mobile spacing issue

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div id="status">
-          <p>Professional coder, yapper, hardware and software enjoyer.</p>
+          <p style="margin-bottom: 1rem;">Professional coder, yapper, hardware and software enjoyer.</p>
           <audio src="./chess type beat ⧸⧸ tiktok dance minecraft music ♪ [yvyA1yiyxgI].mp3" controls></audio>
         </div>
 
